# PyMiniRacer

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .mdformat.toml  .pre-commit-config.yaml  .travis.yml  ARCHITECTURE.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Dockerfile.build  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  azure-pipelines.yml  build.sh  build_and_check_linux_wheels.sh  build_c_extension.sh  build_linux_arm64.sh  build_linux_musl_wheels.sh  build_linux_wheels.sh  build_mac_os_x_wheel.sh  build_mac_os_x_wheels.sh  build_macos.sh  build_so.sh  build_v8.sh  docker-compose.yml  hatch_build.py  install_osx.sh  mini_racer_extension.cc  mkdocs.yml  mkdocs_hooks.py  pyproject.toml  setup.cfg  (+5 more)
.azure/pipelines/: build.yml  build_v8.yml
.github/: issue_template.md
.github/workflows/: build.yml  docs.yml  pre-commit.yml  pypi-build.yml
docker/: Dockerfile-centos-5  Dockerfile-centos-6  Dockerfile.auditwheel_repair  Dockerfile.py27  Dockerfile.py27-narrow  Dockerfile.py34  Dockerfile.py35  Dockerfile.py36  build_and_check.sh  fix_wheel.sh
docker/build_scripts/: build.sh  cpython-pubkeys.txt
docs/: ARCHITECTURE.md  Makefile  api.md  api.rst  architecture.md  conf.py  index.rst  installation.rst  make.bat  readme.rst  usage.rst
helpers/: babel.py  build_package.py  cibuild.yml  no-aarch64-linux-gnu-target.patch  release.yml  split-threshold-for-reg-with-hint.patch  v8_build.py  wheel_pymalloc.py
patches/: 0001-Build-standalone-static-library.patch  0002-Disable-building-tests.patch  0003-Use-the-fPIC-flag-for-the-static-library.patch  01-update-gn-on-windows.patch  debug-vs.patch
py_mini_racer/: __about__.py  __init__.py  py_mini_racer.py
py_mini_racer/extension/: .editorconfig  .gitignore  .gn  BUILD.gn  mini_racer_extension.cc  serializer.cc  serializer.h  v8_build.py
py_mini_racer/ffi/: mini_racer_build.py  v8_build.py
requirements/: dev.txt  prod.txt  setup.txt  test.txt
src/: mini_racer_extension.cc
src/py_mini_racer/: __about__.py  __init__.py  _context.py  _context_base.py  _mini_racer.py  _objects.py  _types.py  _value_handle.py  py_mini_racer.py
src/v8_py_frontend/: BUILD.gn  README.md  binary_value.cc  binary_value.h  breaker_thread.cc  breaker_thread.h  callback.h  cancelable_task_runner.cc  cancelable_task_runner.h  code_evaluator.cc  code_evaluator.h  context.cc  context.h  context_factory.cc  context_factory.h  context_holder.cc  context_holder.h  count_down_latch.cc  count_down_latch.h  exports.cc  exports.h  gsl_stub.h  heap_reporter.cc  heap_reporter.h  id_maker.h  isolate_holder.cc  isolate_holder.h  isolate_manager.cc  isolate_manager.h  isolate_memory_monitor.cc  isolate_memory_monitor.h  isolate_object_collector.cc  isolate_object_collector.h  isolate_pump.cc  isolate_pump.h  js_callback_maker.cc  js_callback_maker.h  mini_racer.cc  mini_racer.h  object_manipulator.cc  (+5 more)
tests/: conftest.py  test_array_growth.py  test_babel.py  test_call.py  test_eval.py  test_functions.py  test_heap.py  test_i18n.py  test_init.py  test_objects.py  test_py_js_function.py  test_py_mini_racer.py  test_strict.py  test_types.py  test_wasm.py
tests/fixtures/: babel.js
