config("py_mini_racer_config") {
  configs = [ "//v8:external_config", "//v8:toolchain", "//v8:features" ]
  include_dirs = [ "v8", "$target_gen_dir/v8" ]
  cflags = []
}

static_library("py_mini_racer_static_lib") {
  complete_static_lib = true
  output_name = "mini_racer"
  sources = [
    "mini_racer_extension.cc",
  ]
  deps = [
    "//build/config:shared_library_deps",
    "//v8:v8",
    "//v8:v8_libbase",
    "//v8:v8_libplatform",
    "//v8:v8_libsampler",
  ]
  configs += [ ":py_mini_racer_config" ]
}

shared_library("py_mini_racer_shared_lib") {
  output_name = "mini_racer"
  sources = [
    "mini_racer_extension.cc",
  ]
  deps = [
    "//build/config:shared_library_deps",
    "//v8:v8",
    "//v8:v8_libbase",
    "//v8:v8_libplatform",
    "//v8:v8_libsampler",
  ]
  configs += [ ":py_mini_racer_config" ]
}
