import("../../gni/v8.gni")

v8_shared_library("mini_racer") {
  output_name = "mini_racer"
  sources = [
    "exports.cc",
    "binary_value.h",
    "binary_value.cc",
    "breaker_thread.h",
    "breaker_thread.cc",
    "mini_racer.h",
    "mini_racer.cc",
  ]
  deps = [
    "//build/config:shared_library_deps",
    "//:v8",
    "//:v8_libbase",
    "//:v8_libplatform",
  ]
}
