import("../../gni/v8.gni")

v8_shared_library("mini_racer") {
  output_name = "mini_racer"
  sources = [
    "exports.cc",
    "binary_value.h",
    "binary_value.cc",
    "breaker_thread.h",
    "breaker_thread.cc",
    "code_evaluator.h",
    "code_evaluator.cc",
    "gsl_stub.h",
    "heap_reporter.h",
    "heap_reporter.cc",
    "isolate_holder.h",
    "isolate_holder.cc",
    "isolate_pump.h",
    "isolate_pump.cc",
    "isolate_memory_monitor.h",
    "isolate_memory_monitor.cc",
    "mini_racer.h",
    "mini_racer.cc",
  ]
  deps = [
    "//build/config:shared_library_deps",
    "//:v8",
    "//:v8_libbase",
    "//:v8_libplatform",
  ]
}
